--- a/package.json
+++ b/package.json
@@ -1,15 +1,3 @@
 {
-  "name": "cypress-parallel",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "cypress": "^8.3.0"
-  }
+  "projectId": "sgrtnb"
 }
