--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,5 @@ orbs:
 workflows:
   build:
     jobs:
-      - cypress/install
       - cypress/run:
-          requires:
-            - cypress/install
-          record: true
-          parallel: true
-          parallelism: 4
+          yarn: true
