--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,10 @@ orbs:
 workflows:
   build:
     jobs:
+      - cypress/install
       - cypress/run:
-          yarn: true
-          store_artifacts: true
+          requires:
+            - cypress/install
           record: true
           parallel: true
-          parallazism: 4
+          parallelism: 4
