--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,4 @@ workflows:
             - cypress/install
           record: true
           parallel: true
-          parallezism: 2
+          parallelism: 4
